--- a/src/main/resources/templates/toppan-add.html
+++ b/src/main/resources/templates/toppan-add.html
@@ -19,13 +19,13 @@
     <header th:insert="blocks/header.html :: header"></header>
 
     <div class="container mt-5">
-        <h1>Добавление статьи</h1>
-        <form action="/blog-add" method="post">
-            <input type="text" name="title" placeholder="Введите название статьи" class="form-control"><br>
-            <input type="text" name="anons" placeholder="Введите анонс статьи" class="form-control"><br>
-            <input type="int" name="views" placeholder="Введите анонс статьи" class="form-control"><br>
-            <textarea name="full_text" placeholder="Введите полный текст статьи" class="form-control"></textarea><br>
-            <button type="submit" class="btn btn-success">Добавить сатью</button>
+        <h1>Внести принтер Toppan CP 500</h1>
+        <form action="/toppan-add" method="post">
+            <input type="text" name="sn" placeholder="Серийній номер" class="form-control"><br>
+            <input type="text" name="code" placeholder="Номенклатурный номер" class="form-control"><br>
+            <input type="text" name="datawork" placeholder="Дата ввеения в эксплуатацию" class="form-control"><br>
+            <textarea name="completeness" placeholder="Комплектность" class="form-control"></textarea><br>
+            <button type="submit" class="btn btn-success">Записать</button>
         </form>
 
     </div>
