--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -12,8 +12,9 @@
 
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/toppan">Принтера</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/toppan-add">Добавим принтер</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan">Принтера</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan-add">Добавим принтер</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
 <!--            <a class="me-3 py-2 text-dark text-decoration-none" href="/about">Про нас</a>-->
 <!--            <a class="me-3 py-2 text-dark text-decoration-none" href="/toppan">Toppan CP 500</a>-->
         </nav>
