--- a/src/main/resources/templates/rubin/rubin-view.html
+++ b/src/main/resources/templates/rubin/rubin-view.html
@@ -1,25 +1,33 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Все Toppan CP 500</title>
+    <title>Блог РСЦ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
 </head>
-<body>
+
 <body data-hasqtip="0">
 
-<div class="container py-3">
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="check" viewBox="0 0 16 16">
+        <title>Check</title>
+        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
+    </symbol>
+</svg>
 
+<div class="container py-3">
+    <header th:insert="blocks/header.html :: header"></header>
     <div class="container mt-5">
-<!--        <h1>Toppan CP 500</h1>-->
+        <!--        <h1>Toppan CP 500</h1>-->
         <div th:each="top:${toppan}" class="alert alert-info mt-2">
+
             <h3 th:text="${'S/n '+ top.sn +'  № ' +top.code }"/>
             <p th:text="${'Введено в дію: '+top.datawork +', комплект : '+ top.completeness}"/>
-<!--            <a th:href="'/blog/'+ ${el.sn}" class="btn btn-warning">Детальнее</a>-->
+            <!--            <a th:href="'/blog/'+ ${el.sn}" class="btn btn-warning">Детальнее</a>-->
         </div>
     </div>
 </div>
 
 </body>
-</body>
+
 </html>
