--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -3,9 +3,9 @@
 <head>
     <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" >
+<!--    <link rel="stylesheet" href="main.css">-->
 </head>
-<body>
 <body data-hasqtip="0">
 
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -27,7 +27,7 @@
                     <p class="lead text-muted"> .</p>
                     <p>
                         <a href="#" class="btn btn-primary my-2">1</a>
-                        <a href="#" class="btn btn-secondary my-2">2</a>
+<!--                        <a href="../printer/toppan" class="btn btn-secondary my-2">2</a>-->
                     </p>
                 </div>
             </div>
@@ -39,13 +39,16 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
                 </div>
+                <textarea> qwww</textarea>
+                <h1 class="fw-light">ШО то тут тоже нарисуем .. потом</h1>
             </div>
         </div>
 
     </main>
     <div th:insert="blocks/footer.html :: footer"></div>
 
-</body>
-<p th:text="'Улыбнись ' + ${title} + '!'"/>
+<!--</body>-->
+<!--<p th:text="'Улыбнись ' + ${title} + '!'"/>-->
+</div>
 </body>
 </html>
