--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,6 +4,7 @@
     <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="main.css">-->
 </head>
 <body>
 <body data-hasqtip="0">
