--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -4,6 +4,7 @@
     <title>Ьлог ,, сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="main.css">-->
 </head>
 
 <body data-hasqtip="0">
