--- a/src/main/resources/templates/printer/Total_Count.html
+++ b/src/main/resources/templates/printer/Total_Count.html
@@ -1,34 +1,34 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Ьлог ,, сайта</title>
+    <title>Блог РСЦ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
+
 <body data-hasqtip="0">
 
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="check" viewBox="0 0 16 16">
-        <title>Check</title>
+        <title>123</title>
         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
     </symbol>
 </svg>
 
 <div class="container py-3">
     <header th:insert="blocks/header.html :: header"></header>
-
     <div class="container mt-5">
-        <h1>Блог сайта</h1>
-        <div th:each="el:${post}" class="alert alert-info mt-2">
+        <!--        <h1>Toppan CP 500</h1>-->
+        <div  class="alert alert-info mt-2">
 
-            <h3 th:text="${el.title}"/>
-            <p th:text="${el.anons}"/>
-            <a th:href="'/blog/'+ ${el.id}" class="btn btn-warning">Детальнее</a>
+            <h3>В процессе</h3>
+<!--            <p th:text="${'Введено в дію: '+top.datawork +', комплект : '+ top.completeness}"/>-->
+            <!--            <a th:href="'/blog/'+ ${el.sn}" class="btn btn-warning">Детальнее</a>-->
         </div>
     </div>
+</div>
 
-    <div th:insert="blocks/footer.html :: footer"></div>
-
-<p th:text="'Привет, ' + ${title} + '!'"/>
 </body>
+
 </html>
