--- a/src/main/resources/templates/printer/toppan-add.html
+++ b/src/main/resources/templates/printer/toppan-add.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Блог РСЦ</title>
+    <title>Блог РСЦ топан адд</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 
 <body data-hasqtip="0">
@@ -29,7 +30,6 @@
             <button type="submit" class="btn btn-success">Записать</button>
         </form>
 
-    </div>
 
         <div th:insert="blocks/footer.html :: footer"></div>
 
