--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -73,6 +73,7 @@
                 <ul class="submenu">
                     <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-view">Довідки</a> </li>
                     <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-add">Звіт</a> </li>
+                    <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin">Тест</a> </li>
                 </ul>
             </li>
 
