--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,49 +1,49 @@
 <div th:fragment="header">
 
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-<!--    <link rel="stylesheet" href="main.css">-->
+        <!--    <link rel="stylesheet" href="main.css">-->
         <style>
-        body {
-            font-family: sans-serif;
-        }
+            body {
+                font-family: sans-serif;
+            }
 
-        ul {
-        display: flex;
-        padding-left: 0;
-        list-style: none;
-        }
+            ul {
+                display: flex;
+                padding-left: 0;
+                list-style: none;
+            }
 
-        li {
-        position: relative;
-        }
+            li {
+                position: relative;
+            }
 
-        li:hover .submenu{
-        display: flex;
-        }
+            li:hover .submenu {
+                display: flex;
+            }
 
-        a {
-        display: block;
-        color: black;
-        text-decoration: none;
-        background-color: #eaebee;
-        padding: 1em;
-        white-space: nowrap;
-        }
+            a {
+                display: block;
+                color: black;
+                text-decoration: none;
+                background-color: #eaebee;
+                padding: 1em;
+                white-space: nowrap;
+            }
 
-        a:hover {
-        background-color: #b0c7c1;
-        }
+            a:hover {
+                background-color: #b0c7c1;
+            }
 
-        a:focus{
-        outline: none;
-            background-color: yellow;
-        }
+            a:focus {
+                outline: none;
+                background-color: yellow;
+            }
 
-        .submenu{
-        display: none;
-        flex-direction: column ;
-        position: absolute;
-        }
+            .submenu {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+            }
         </style>
 
 
@@ -54,31 +54,33 @@
                       d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
                       fill="currentColor"></path>
             </svg>
-            <span class="fs-3">РСЦ ГСЦ МВС В ЖИТОМИРСЬКІЙ ОБЛАСТІ</span>
+            <span class="fs-3">РСЦ ГСЦ МВС в Житомирській області</span>
         </a>
 
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-<!--            <ul class="menu">-->
+            <!--            <ul class="menu">-->
             <ul>
-            <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a></li>
-            <li><a class="me-3 py-2 text-dark text-decoration-none" href="">Toppan CP 500</a>
-                <ul class="submenu">
-                    <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan">Принтера</a> </li>
-                    <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan-add">Добавим принтер</a> </li>
-                    <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/Total_Count">Total Count</a> </li>
-                </ul>
-            </li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a></li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="">Toppan CP 500</a>
+                    <ul class="submenu">
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan">Принтера</a>
+                        </li>
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan-add">Добавим
+                            принтер</a></li>
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/Total_Count">Total
+                            Count</a></li>
+                    </ul>
+                </li>
 
-            <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
-                <ul class="submenu">
-                    <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-view">Довідки</a> </li>
-                    <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-add">Звіт</a> </li>
-                    <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin">Тест</a> </li>
-                </ul>
-            </li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
+                    <ul class="submenu">
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-view">Довідки</a>
+                        </li>
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-add">Звіт</a></li>
+<!--                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin">Тест</a></li>-->
+                    </ul>
+                </li>
 
-<!--            <a class="me-3 py-2 text-dark text-decoration-none" href="/about">Про нас</a>-->
-<!--            <a class="me-3 py-2 text-dark text-decoration-none" href="/toppan">Toppan CP 500</a>-->
             </ul>
         </nav>
     </div>
