--- a/src/main/resources/templates/rubin/rubin-add.html
+++ b/src/main/resources/templates/rubin/rubin-add.html
@@ -20,13 +20,14 @@
         <input type="text" th:value="${tsc}" name="pidrozdil" placeholder="Підрозділ" class="form-control" id="pidrozdil"><br>
         <label for="data_v">Дата : </label>
         <input type="date" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>
+<!--        <input class="form-con<input class="form-control" type="date" [ngModel] ="dateFrom | date:'yyyy-MM-dd'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="2016-10-01" [value]="2016-10-01" />trol" type="date" [ngModel] ="dateFrom | date:'dd-mm-yyyy'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="01-01-1900" [value]="01-10-2016" />-->
         <label for="week">Кількість звернень за тиждень : </label>
-        <input type="text" name="week" placeholder="звернень за тиждень" class="form-control" id="week"><br>
+        <input type="text" name="week" placeholder="звернень за тиждень" class="form-control" id="week"/>
         <label for="week_1">Кількість виданих.. за тиждень : </label>
         <input type="text" name="week_1" placeholder="виданих за тиждень" class="form-control" id="week_1"><br>
-        <label for="year">Кількість звернень за рік : </label>
-        <input type="text" name="year" placeholder="Кількість звернень за рік" class="form-control" id="year"><br>
-        <label for="year_1">Кількість виданих.. за рік : </label>
+        <label for="year">Кількість звернень за рік ......... : </label>
+        <input type="text" name="year" placeholder="Кількість звернень за рік" class="form-control" id="year"/>
+        <label for="year_1">Кількість виданих.. за рік ....... . : </label>
         <input type="text" name="year_1" placeholder="Кількість виданих.. за рік" class="form-control" id="year_1"><br>
 
 <!--        <textarea name="completeness" placeholder="Комплектность" class="form-control"></textarea><br>-->
