--- a/src/main/resources/templates/rubin/rubin-view.html
+++ b/src/main/resources/templates/rubin/rubin-view.html
@@ -13,12 +13,15 @@
     <header th:insert="blocks/header.html :: header"></header>
     <div>
         <form action="../rubin/rubin-view" method="post">
-
             <!--        <input type="text" th:value="${tsc}" disabled name="pidrozdil" placeholder="Підрозділ" class="form-control" id="pidrozdil"><br>-->
             <label for="data_v" > Дата внесення  : </label>
             <input type="date" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>
+
+
             <button type="submit" class="btn btn-success">Пошук</button>
-            <button type="submit" class="btn btn-success">Друк звіту</button>
+            <form action="../rubin/rubin-print" method="post">
+                <button type="submit" class="btn btn-success">Друк звіту</button>
+            </form>
         </form>
     </div>
 
@@ -27,9 +30,13 @@
         <h4 th:text="${tsc}"></h4>
 
         <div th:each="rubin:${rubinList}" class="alert alert-info mt-2">
-            <h4 th:text="${rubin.pidrozdil + ' ....  ' + #dates.format(rubin.data_v, 'dd.MM.yyyy') }"/>
+<!--            <h4 th:text="${rubin.pidrozdil + ' ....  ' + #dates.format(rubin.data_v, 'dd.MM.yyyy') }"/>-->
+            <h4 th:text="${rubin.pidrozdil + ' ....  ' + rubin.data_v}"/>
             <p th:text="${'звернень тиждень :' +rubin.week + '  з початку року : '+rubin.year  }"/>
             <p th:text="${'виданих  тиждень :'+rubin.week_1 +'  з початку року : '+ rubin.year_1 }"/>
+            <ul>
+                <li th:each="err : ${#fields.errors('*')}" th:text="${err}" />
+            </ul>
         </div>
     </div>
 </div>
