--- a/src/main/resources/templates/rubin/rubin-add.html
+++ b/src/main/resources/templates/rubin/rubin-add.html
@@ -42,10 +42,10 @@
             <input type="text" th:field="*{rubin.week_1}"
                    th:class="${#fields.hasErrors('rubin.week_1')}? fieldError " id="week_1" /><br>
 
-            <label for="year">Кількість звернень за рік ......... : </label>
+            <label for="year_0">Кількість звернень за рік ......... : </label>
 
-            <input type="text" th:field="*{rubin.year}"
-                   th:class="${#fields.hasErrors('rubin.year')}? fieldError " id="year" />
+            <input type="text" th:field="*{rubin.year_0}"
+                   th:class="${#fields.hasErrors('rubin.year_0')}? fieldError " id="year_0" />
 
             <label for="year_1">Кількість виданих.. за рік ....... . : </label>
             <input type="text" th:field="*{rubin.year_1}"
