--- a/src/main/resources/templates/rubin/rubin-add-copy.html
+++ b/src/main/resources/templates/rubin/rubin-add-copy.html
@@ -20,8 +20,12 @@
             <!--        <input type="text" th:value="${tsc}" disabled name="pidrozdil" placeholder="Підрозділ" class="form-control" id="pidrozdil"><br>-->
             <input type="text" th:value="${tsc}" name="pidrozdil" placeholder="Підрозділ" class="form-control" id="pidrozdil"><br>
             <label for="data_v">Дата : </label>
-            <input type="date" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>
-            <!--        <input class="form-con<input class="form-control" type="date" [ngModel] ="dateFrom | date:'yyyy-MM-dd'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="2016-10-01" [value]="2016-10-01" />trol" type="date" [ngModel] ="dateFrom | date:'dd-mm-yyyy'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="01-01-1900" [value]="01-10-2016" />-->
+            <input id="today" type="date" id="data_v" >
+            <script>
+                document.getElementById('today').value = moment().format('YYYY-MM-DD');
+            </script>
+<!--            <input type="date" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>-->
+<!--                    <input class="form-con<input class="form-control" type="date" [ngModel] ="dateFrom | date:'yyyy-MM-dd'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="2016-10-01" [value]="2016-10-01" />trol" type="date" [ngModel] ="dateFrom | date:'dd-mm-yyyy'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="01-01-1900" [value]="01-10-2016" />-->
             <label for="week">Кількість звернень за тиждень : </label>
             <input type="text" name="week" placeholder="звернень за тиждень" class="form-control" id="week"/>
             <label for="week_1">Кількість виданих.. за тиждень : </label>
