--- a/src/main/resources/templates/rubin/rubin-view-p.html
+++ b/src/main/resources/templates/rubin/rubin-view-p.html
@@ -14,7 +14,10 @@
     <div>
         <form action="../rubin/rubin-view-p" method="post">
             <!--        <input type="text" th:value="${tsc}" disabled name="pidrozdil" placeholder="Підрозділ" class="form-control" id="pidrozdil"><br>-->
-            <input type="date" th:value="${dat}" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>
+            <input type="date" id="start" name="data_v"
+                   th:value="${dat}"
+                   min="2018-01-01" max="2031-12-31">
+<!--            <input type="date" th:value="${dat}" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>-->
 
             <button type="submit" class="btn btn-success">Друк</button>
 
@@ -28,7 +31,7 @@
         <div th:each="rubin:${rubinList}" class="alert alert-info mt-2">
             <!--            <h4 th:text="${rubin.pidrozdil + ' ....  ' + #dates.format(rubin.data_v, 'dd.MM.yyyy') }"/>-->
             <h4 th:text="${rubin.pidrozdil + ' ....  ' + rubin.data_v}"/>
-            <p th:text="${'звернень тиждень :' +rubin.week + '  з початку року : '+rubin.year  }"/>
+            <p th:text="${'звернень тиждень :' +rubin.week + '  з початку року : '+rubin.year_0  }"/>
             <p th:text="${'виданих  тиждень :'+rubin.week_1 +'  з початку року : '+ rubin.year_1 }"/>
 <!--            <ul>-->
 <!--                <li th:each="err : ${#fields.errors('*')}" th:text="${err}" />-->
