--- a/src/main/resources/templates/rubin/rubin-add.html
+++ b/src/main/resources/templates/rubin/rubin-add.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Проверка</title>
+    <title>Рубин</title>
 </head>
 <body>
 <!--/*@thymesVar id="tit" type=""*/-->
