--- a/src/main/resources/templates/rubin/rubin-view.html
+++ b/src/main/resources/templates/rubin/rubin-view.html
@@ -15,10 +15,8 @@
         <form action="../rubin/rubin-view" method="post">
             <!--        <input type="text" th:value="${tsc}" disabled name="pidrozdil" placeholder="Підрозділ" class="form-control" id="pidrozdil"><br>-->
             <label for="data_v" > Дата внесення  : </label>
-            <input type="date" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>
-
+            <input type="date" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" >
             <button type="submit" class="btn btn-success">Пошук</button>
-
         </form>
     </div>
 
