--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,6 +1,7 @@
 <div th:fragment="header">
 
-    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+<!--    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">-->
+        <div>
         <!--    <link rel="stylesheet" href="main.css">-->
         <style>
             body {
