--- a/src/main/resources/templates/rubin/rubin-edit.html
+++ b/src/main/resources/templates/rubin/rubin-edit.html
@@ -1,57 +1,24 @@
+
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Рубін редагування</title>
+    <meta charset="UTF-8">
+    <title>Update person</title>
 </head>
 <body>
-<!--/*@thymesVar id="tit" type=""*/-->
-<div>  <header th:insert="blocks/header.html :: header"></header>
 
-
-  <div>
-    <!--/*@thymesVar id="rubin" type="toppan"*/-->
-    <form th:action="@{../rubin/{id}(id=${rubin.getId()})}" th:method="PATCH" th:object="${rubin}">
-
-      <label for="pidrozdil">ТСЦ : </label>
-
-      <!--/*@thymesVar id="rubin" type="toppan"*/-->
-      <input type="text" th:value="*{rubin.pidrozdil}" name="pidrozdil" placeholder="Підрозділ" class="form-control" id="pidrozdil"><br>
-      <label for="data_v">Дата : </label>
-      <input type="date" th:value="${rubin.data_v}" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>
-      <!--        <input class="form-con<input class="form-control" type="date" [ngModel] ="dateFrom | date:'yyyy-MM-dd'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="2016-10-01" [value]="2016-10-01" />trol" type="date" [ngModel] ="dateFrom | date:'dd-mm-yyyy'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="01-01-1900" [value]="01-10-2016" />-->
-      <label for="week">Кількість звернень за тиждень : </label>
-      <!--            -->
-      <!--            <input type="text" name="week" placeholder="звернень за тиждень" class="form-control" id="week"/>-->
-      <input type="text" th:field="*{rubin.week}"
-             th:class="${#fields.hasErrors('rubin.week')}? fieldError " id="week" />
-      <!--            -->
-      <!--            <input type="text" name="week" placeholder="звернень за тиждень" class="form-control" id="week"/>-->
-
-      <label for="week_1">Кількість виданих.. за тиждень : </label>
-      <!--            <input type="text" name="week_1" placeholder="виданих за тиждень" class="form-control" id="week_1"><br>-->
-      <input type="text" th:field="*{rubin.week_1}"
-             th:class="${#fields.hasErrors('rubin.week_1')}? fieldError " id="week_1" /><br>
-
-      <label for="year_0">Кількість звернень за рік ......... : </label>
-
-      <input type="text" th:field="*{rubin.year_0}"
-             th:class="${#fields.hasErrors('rubin.year_0')}? fieldError " id="year_0" />
-
-      <label for="year_1">Кількість виданих.. за рік ....... . : </label>
-      <input type="text" th:field="*{rubin.year_1}"
-             th:class="${#fields.hasErrors('rubin.year_1')}? fieldError " id="year_1" /><br>
-      <ul>
-        <li th:each="err : ${#fields.errors('*')}" th:text="${err}" />
-      </ul>
-      <button type="submit" class="btn btn-success">Виправити</button>
-    </form>
-  </div>
-
+<div class="container mt-5">
+    <h1>Блог сайта</h1>
+    <div th:each="rub:${rubin}" class="alert alert-info mt-2">
+        <h1 th:text="${rubin.}"/>
+        <p th:text="${el.full_text}"/>
+        <p><b>Просмотры:</b> <span th:text="${el.views}"/></p>
+        <a th:href="'/blog/'+ ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a>
+        <form th:action="'/blog/'+ ${el.id} +'/remove'" method="post">
+            <button class="btn btn-warning" type="submit">Удалить</button>
+        </form>
+    </div>
 </div>
-</body>
-</html>
-</div>
-</div>
+
 </body>
 </html>
