--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -2,7 +2,7 @@
     <footer class="text-muted py-5">
         <div class="container">
             <p class="float-end mb-1">
-                <a href="/">Back to top</a>
+                <a href="/">На главную</a>
             </p>
 <!--            <p class="mb-1">Album example is © Bootstrap, but please download and customize it for yourself!</p>-->
 <!--            <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a-->
