--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -33,16 +33,16 @@
             </div>
         </section>
 
-        <div class="album py-5 bg-light">
-            <div class="container">
+<!--        <div class="album py-5 bg-light">-->
+<!--            <div class="container">-->
 
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+<!--                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">-->
 
-                </div>
-                <textarea> qwww</textarea>
-                <h1 class="fw-light">ШО то тут тоже нарисуем .. потом</h1>
-            </div>
-        </div>
+<!--                </div>-->
+<!--                <textarea> qwww</textarea>-->
+<!--                <h1 class="fw-light">ШО то тут тоже нарисуем .. потом</h1>-->
+<!--            </div>-->
+<!--        </div>-->
 
     </main>
     <div th:insert="blocks/footer.html :: footer"></div>
