--- a/src/main/resources/templates/rubin/rubin-view.html
+++ b/src/main/resources/templates/rubin/rubin-view.html
@@ -8,7 +8,7 @@
 
 <body data-hasqtip="0">
 
-<div class="container py-3">
+<div class="container py-3 mb-1">
 
     <header th:insert="blocks/header.html :: header"></header>
     <div >
@@ -21,18 +21,12 @@
 
     <div class="container mt-5 mb-1">
 
-<!--        <h4 th:text="${tsc}"></h4>-->
-
         <div th:each="rubin:${rubinList}" class="alert alert-info mt-2">
-<!--            <h4 th:text="${rubin.pidrozdil + ' ....  ' + #dates.format(rubin.data_v, 'dd.MM.yyyy') }"/>-->
             <a th:href="@{/rubin/{id} (id=${rubin.getId()})}" th:text="${rubin.pidrozdil + ' ....  ' + rubin.data_v}">user</a>
-<!--            <h4 th:text="${rubin.pidrozdil + ' ....  ' + rubin.data_v}"/>-->
             <p th:text="${'звернень тиждень :' +rubin.week + '  з початку року : '+rubin.year_0  }"/>
             <p th:text="${'виданих  тиждень :'+rubin.week_1 +'  з початку року : '+ rubin.year_1 }"/>
-<!--            <ul>-->
-<!--                <li th:each="err : ${#fields.errors('*')}" th:text="${err}" />-->
-<!--            </ul>-->
         </div>
+
     </div>
 </div>
 
