--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -75,10 +75,10 @@
 
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
                     <ul class="submenu">
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-view">Довідки</a>
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view">Довідки</a>
                         </li>
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-add">Звіт</a></li>
-<!--                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin">Тест</a></li>-->
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">Звіт щоденний</a></li>
+
                     </ul>
                 </li>
 
